// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ClayIcon should render an icon with classes 1`] = `
<svg class="lexicon-icon lexicon-icon-add-cell my-custom-class" focusable="false" role="presentation">
  <use xlink:href="../node_modules/clay-css/lib/images/icons/icons.svg#add-cell"></use>
</svg>
`;

exports[`ClayIcon should render an icon with focusable to false by default 1`] = `
<svg class="lexicon-icon lexicon-icon-add-cell" focusable="false" role="presentation">
  <use xlink:href="../node_modules/clay-css/lib/images/icons/icons.svg#add-cell"></use>
</svg>
`;

exports[`ClayIcon should render an icon with focusable to true 1`] = `
<svg class="lexicon-icon lexicon-icon-add-cell" focusable="true" role="presentation">
  <use xlink:href="../node_modules/clay-css/lib/images/icons/icons.svg#add-cell"></use>
</svg>
`;

exports[`ClayIcon should render an icon with id 1`] = `
<svg class="lexicon-icon lexicon-icon-add-cell" focusable="false" id="myId" role="presentation">
  <use xlink:href="../node_modules/clay-css/lib/images/icons/icons.svg#add-cell"></use>
</svg>
`;

exports[`ClayIcon should render an icon with specified title 1`] = `
<svg class="lexicon-icon lexicon-icon-add-cell" focusable="false" role="presentation">
  <use xlink:href="../node_modules/clay-css/lib/images/icons/icons.svg#add-cell"></use>
</svg>
`;

exports[`ClayIcon should render an icon with specified title when id is passed too 1`] = `
<svg class="lexicon-icon lexicon-icon-add-cell" focusable="false" id="myId" role="presentation">
  <use xlink:href="../node_modules/clay-css/lib/images/icons/icons.svg#add-cell"></use>
</svg>
`;

exports[`ClayIcon should render markup for icon \`add-cell\` 1`] = `
<svg class="lexicon-icon lexicon-icon-add-cell" focusable="false" role="presentation">
  <use xlink:href="../node_modules/clay-css/lib/images/icons/icons.svg#add-cell"></use>
</svg>
`;
